Fixed hero image on iPhone landscape layout.

--- a/_sass/_homepage.sass
+++ b/_sass/_homepage.sass
@@ -15,7 +15,7 @@
     margin-left: auto
 
   @include small
-    background-position: top center
+    background-position: top right
     background-attachment: fixed
 
 #ethics
